@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix cpan-testers mis-reporting FAIL when no flex installed.
 
+****	Fix Perl Critic error when not installed, rt39654. [Andreas Koening]
+
 * Verilog::Language 3.042 2008/09/19
 
 ***	Add Netlist net, port and module ->delete methods. [Daniel Schoch]
